6791132: bad control in autobox split code

Reviewed-by: kvn